Tue Oct 23 14:40:12 2001  George Lebl <jirka@5z.com>

	* gnome-program.h: add padding to the class structure to
	  allow for future expansions

	* gnome-util.c: make gnome_setenv handle null value

2001-10-23  jacob berkman  <jacob@ximian.com>

	* gnome-program.c (gnome_program_initv): register the
	libgnome_module if it wasn't passed in.  this isn't the gross hack
	it was when gtk didn't have gdk_threads_init().

2001-10-19  jacob berkman  <jacob@ximian.com>

	* gnome-preferences.c (do_warning): don't be so damn annoying

2001-10-18 Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: simplify gconf install

	* gnome-url.c (gnome_url_show): unref gconf client.

Wed Oct 17 17:39:42 2001  George Lebl <jirka@5z.com>

	* gnome-program.c: remove two unused fields from the private
	  struct

Wed Oct 17 17:32:41 2001  George Lebl <jirka@5z.com>

	* gnome-preferences.c: fix warnings

Wed Oct 17 11:25:38 2001  George Lebl <jirka@5z.com>

	* gnome-preferences.c:  We really don't want people to use
	  gnome-preferences, so make it say evil things to the developer
	  at runtime

2001-10-17 Mark McLoughlin  <mark@skynet.ie>

	* gnome-preferences.c: add comments to indicate which
	ones have been replaced by gconf keys.

Sun Oct 14 20:12:14 2001  George Lebl <jirka@5z.com>

	* gnome-program.c: popt IS the evil incarnate.  There is no
	  reasonable way to pass data to the callbacks.  And we don't want
	  to modify or use the options.  So add a hack that sets
	  a data on the context with the GnomeProgram, so in a callback
	  if you want to get the GnomeProgram object you'd do
	  g_dataset_get_data (popt_context, "GnomeProgram");  Evil?
	  yes.  And it's the only way to do this sanely.

2001-10-10  Glynn Foster <glynn.foster@sun.com>

	* gnome-gconf.c: Change to use proper gconf key for desktop wide
	  settings [ie. /desktop/gnome]

Tue Oct 09 18:22:34 2001  George Lebl <jirka@5z.com>

	* libgnome.schema, Makefile.am: schemas for preferences, this