@@ -1,3 +1,8 @@
+2001-10-24  Anders Carlsson  <andersca@gnu.org>
+
+	* gnome-preferences.[ch]: Remove these files as they aren't used
+	anymore.
+
 Tue Oct 23 14:40:12 2001  George Lebl <jirka@5z.com>
 
 	* gnome-program.h: add padding to the class structure to
